--- a/index.html
+++ b/index.html
@@ -14,21 +14,23 @@
     <div class="container">
         <div id="dosbox"></div>
         <button class="wrapper" onclick="dosbox.requestFullScreen();">
-            <a><span>FULLSCREEN</span></a>
+            <span>FULLSCREEN</span>
         </button>
     </div>
 
     <script type="text/javascript" src="./script.js"></script>
     <script type="text/javascript">
-        var dosbox = new Dosbox({
-            id: "dosbox",
-            onload: function (dosbox) {
-                dosbox.run("./roms/ultimate-doom.zip", "./UltDoom/DOOM.EXE");
-				dosbox.requestFullScreen();
-            },
-            onrun: function (dosbox, app) {
-                console.log("App '" + app + "' is runned");
-            }
+        document.addEventListener("DOMContentLoaded", function () {
+            var dosbox = new Dosbox({
+                id: "dosbox",
+                onload: function (dosbox) {
+                    dosbox.run("./roms/ultimate-doom.zip", "./UltDoom/DOOM.EXE");
+                    dosbox.requestFullScreen();
+                },
+                onrun: function (dosbox, app) {
+                    console.log("App '" + app + "' is running");
+                }
+            });
         });
     </script>
 </body>
