--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>ISSO RODA DOOM</title>
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./styles/button.css">
+    <style>
+        #dosbox {
+            display: none;
+        }
+    </style>
 </head>
 
 <body>
