--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
             }, 1000);
 			
 			 setTimeout(function () {
-				var fsButton = document.querySelector(".fs-button");
+				var fsButton = document.querySelector(".wrapper");
                 if (fsButton) {
                     fsButton.click(); // Simula o clique no botão de fullscreen
                 }
-            }, 10000);
+            }, 5000);
 			
         });
     </script>
