--- a/index.html
+++ b/index.html
@@ -6,8 +6,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ISSO RODA DOOM</title>
-    <meta http-equiv="Access-Control-Allow-Origin" content="*">
-    <meta http-equiv="Cross-Origin-Embedder-Policy" content="Allow">
     <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" type="text/css" href="./styles/button.css">
 </head>
@@ -20,7 +18,7 @@
         </button>
     </div>
 
-    <script type="text/javascript" src="./script.js" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="./script.js"></script>
     <script type="text/javascript">
         var dosbox;
         document.addEventListener("DOMContentLoaded", function () {
@@ -28,30 +26,27 @@
                 id: "dosbox",
                 onload: function (instance) {
                     instance.run("./roms/ultimate-doom.zip", "./UltDoom/DOOM.EXE");
-                    setTimeout(function () {
-                        var startButton = document.querySelector(".dosbox-start");
-                        if (startButton) {
-                            startButton.click(); // Simula o clique no botão de iniciar
-                            document.getElementById("fullscreen-btn").click();
-                        }
-                    }, 1000);
                 },
                 onrun: function (instance, app) {
                     console.log("App '" + app + "' is running");
                 }
             });
+
+            setTimeout(function () {
+                var startButton = document.querySelector(".dosbox-start");
+                if (startButton) {
+                    startButton.click(); // Simula o clique no botão de iniciar
+                }
+            }, 1000);
+			
+			setTimeout(function () {
+				document.getElementById("fullscreen-btn").addEventListener("click", function () {
+					dosbox.requestFullScreen();
+				});
+            }, 3000);
         });
 
-        document.getElementById("fullscreen-btn").addEventListener("click", function () {
-            try {
-                dosbox.requestFullScreen();
-            } catch (e) {
-                console.warn("Fullscreen request failed, retrying...");
-                setTimeout(function () {
-                    document.getElementById("fullscreen-btn").click();
-                }, 1000);
-            }
-        });
+        
     </script>
 </body>
 
